--- a/hello.html
+++ b/hello.html
@@ -3,9 +3,11 @@
 <title>{{page_title}}</title>
 </head>
 <body>
-Request was for {{url}}
+<!-- Request was for {{url}}
 {% for i in counter_list %}
+
 <p>{{greeting}}</p>
-{% endfor %}
+{% endfor %} -->
+Under development... Come back in less than a week to see future become history...
 </body>
 </html>
