--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 
   <!-- local files -->
-  <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
-  <script src="/stylesheets/p5.dom.js"></script>
-  <script src="/stylesheets/p5.speech.js"></script>
-  <script src="/stylesheets/p5.sound.js"></script>
-  <script src="/stylesheets/main.js"></script>
+  <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
+  <script src="stylesheets/p5.dom.js"></script>
+  <script src="stylesheets/p5.speech.js"></script>
+  <script src="stylesheets/p5.sound.js"></script>
+  <script src="stylesheets/main.js"></script>
 
 </head>
 <body>
@@ -26,7 +26,7 @@
 
   <div class="container">
     <div id="displayText">
-      <p>{{message}}</p>
+      <p>Hello, today I would like to introduce to you the new generation for our websites, are you ready for this?</p>
     </div>
     <div id="mostrecentword"></div>
 
